# rust-auth-demo

./: .env  App.toml  Cargo.toml  Procfile  README.md  skaffold.yaml
ops/docker/: sqlx.dockerfile
ops/k8s/app/: auth-deployment.yaml  auth-service.yaml  job-reader-role.yaml  job-reader-rolebinding.yaml
ops/k8s/migrations/: migrations-job.yaml
ops/k8s/storage/: postgres-deployment.yaml
src/: auth.rs  config.rs  lib.rs
src/auth/: controller.rs  credential.rs  credential_repo.rs  model.rs  service.rs  token_repo.rs
src/auth/controller/: error.rs  mod.rs
src/auth/credential_repo/: mod.rs  tests.rs
src/auth/model/: credentials.rs  error.rs  mod.rs
src/auth/service/: tests.rs
src/auth/token_repo/: mod.rs  tests.rs
src/config/: app.rs  db.rs  redis.rs
src/controller/: mod.rs
src/credential_repo/: mod.rs  tests.rs
src/model/: credentials.rs  error.rs  mod.rs
src/service/: mod.rs  tests.rs
src/token_repo/: mod.rs  tests.rs
src/tracer/: mod.rs
tests/: http_tests.rs
