[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.sqlx-macros]
opt-level = 3 # https://github.com/launchbadge/sqlx

[dependencies]
thiserror = "1.0.30"

[dependencies.anyhow]
version = "1.0.56"
features = ["backtrace"]

[dependencies.redis]
version = "0.21.5"
features = ["tokio-comp"]

# TODO https://github.com/SergioBenitez/Rocket/issues/1893#issuecomment-1002393878
[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
features = ["json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.5.11"
features = ["macros", "runtime-tokio-rustls", "postgres", "offline"]

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = ["v4", "fast-rng", "macro-diagnostics"]

## DEV ##

[dev-dependencies]
double-checked-cell-async = "2.0.2"
lazy_static = "1.4.0"
mockall = "0.11.0"
